--- a/index.html
+++ b/index.html
@@ -9,15 +9,55 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="logo-bar" id="centered">This
-            <div class="logo" id="centered">
+        <div class="logo-bar">
+            <div class="logo">
                 koinonia
             </div>
         </div>
     </div>
 
     <div class="main">
+        <div class="intro">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quaerat? Eius error soluta, dolorum voluptatum, suscipit dignissimos tenetur eligendi perferendis et consequatur deleniti quisquam. Incidunt, et temporibus! Dolorem, asperiores? Laboriosam.
+        </div>
 
+        <div class="mid-section">
+            <div class="form-intro">Let's get started!</div>
+            <form class="actual-form">
+                <div class="left-side">
+                    <div class="form-item">
+                        <label for="firstName">FIRST NAME</label>
+                        <input type="text" id="firstName" name="firstName">
+                    </div>
+                    <div class="form-item">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div class="form-item">
+                        <label for="user_password">PASSWORD</label>
+                        <input type="password" id="user_password" name="user_password">
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="form-item">
+                        <label for="lastName">LAST NAME</label>
+                        <input type="text" id="lastName" name="lastName">
+                    </div>
+                    <div class="form-item">
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" id="phone" name="phone">
+                    </div>
+                    <div class="form-item">
+                        <label for="confirm_password">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm_password" name="confirm_password">
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="bot-section">
+            
+        </div>
     </div>
 </body>
 </html>
