--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="sidebar">
         <div class="logo-bar">
             <div class="logo">
-                koinonia
+                koinonia bake shop
             </div>
         </div>
     </div>
@@ -56,7 +56,10 @@
         </div>
 
         <div class="bot-section">
-            
+            <button id="submit" type="submit">Create Account</button>
+            <div class="login">
+                Already have an account? <button id="log-in" type="button">Log In</button>
+            </div>
         </div>
     </div>
 </body>
