Added intro text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
     <div class="main">
         <div class="intro">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quaerat? Eius error soluta, dolorum voluptatum, suscipit dignissimos tenetur eligendi perferendis et consequatur deleniti quisquam. Incidunt, et temporibus! Dolorem, asperiores? Laboriosam.
+            <em>"But when the kindness of God our Savior and His love for mankind appeared, 
+                He saved us, not on the basis of deeds which we have done in righteousness, 
+                but according to His mercy, by the washing of regeneration and renewing by the Holy Spirit,
+                whom He poured out upon us richly through Jesus Christ our Savior, 
+                so that being justified by His grace we would be made heirs according to the hope of eternal life. <strong>(Titus 3:4-7)</strong> For even the Son of Man did not come to be served, but to serve, and to give His life a ransom for many" 
+            <strong>(Mark 10:45)</strong> Therefore encourage one another and build up one another, just as you also are doing <strong>(1 Thessalonians 5:11)</strong></em>
         </div>
 
         <div class="mid-section">
